--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -19,7 +19,8 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30px 30px 30px 150px;
+    margin: 0 200px;
+   
 }
  .nav-title {
     color: #181818;
@@ -43,4 +44,12 @@ nav > li{
 /* header related styles */
 .header{
     background-color: #FFF8F3;
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.banner .profile-pic{
+width: 500px;
 }
