sobuj islam sobuj islam

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -103,6 +103,10 @@ nav>li {
 }
 
 /* main section styles */
+main{
+    width: 1140px;
+    margin: 0 auto;
+}
 
 /* about section styles */
 .about {
@@ -110,4 +114,7 @@ nav>li {
     border-radius: 10px;
     background: #FFF8F3;
     margin: 130px 0;
+}
+.about-info-container{
+    display: flex;
 }
