--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -117,4 +117,8 @@ main{
 }
 .about-info-container{
     display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
 }
