--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -122,3 +122,11 @@ main{
 .about-info{
     text-align: center;
 }
+/* skills related styles */
+.skills-container{
+    display: flex;
+}
+#what-i-do-description{
+    padding: 30px 150px;
+}
+
