--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -103,9 +103,13 @@ nav>li {
 }
 
 /* main section styles */
-main{
+main {
     width: 1140px;
     margin: 0 auto;
+}
+
+main section {
+    margin-top: 130px;
 }
 
 /* about section styles */
@@ -115,18 +119,48 @@ main{
     background: #FFF8F3;
     margin: 130px 0;
 }
-.about-info-container{
+
+.about-info-container {
     display: flex;
     justify-content: space-around;
 }
-.about-info{
+
+.about-info {
     text-align: center;
 }
+
+
 /* skills related styles */
-.skills-container{
-    display: flex;
-}
-#what-i-do-description{
-    padding: 30px 150px;
+
+
+#what-i-do-description {
+    padding: 30px 50px;
 }
 
+.skills-container {
+    display: flex;
+    gap: 24px;
+
+}
+
+.skill {
+    padding: 30px;
+}
+
+.skill {
+    padding: 30px border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skill-description {
+    color: #757575;
+}
+
+/* Resume section styles */
+.resume-column-title {
+    color: var #474747;
+    font-size: 30px;
+    font-weight: 700;
+
+}
