sobuj islam islam

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -162,5 +162,33 @@ main section {
     color: var #474747;
     font-size: 30px;
     font-weight: 700;
+    margin-bottom: 10px;
+}
 
+.resume-container {
+    display: flex;
+    gap: 50px;
+}
+
+.resume-item {
+    color: #474747;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.resume-item-institute{
+    margin-bottom: 20px;
+    margin-top: 0px;
+}
+.resume-item-title-institute,
+.resume-item-description {
+    color: #757575;
+}
+.resume-container hr{
+    margin: 30px;
+}
+
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
 }
