--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -176,26 +176,37 @@ main section {
     margin-bottom: 10px;
 }
 
-.resume-item-institute{
+.resume-item-institute {
     margin-bottom: 20px;
     margin-top: 0px;
 }
+
 .resume-item-title-institute,
 .resume-item-description {
     color: #757575;
 }
-.resume-container hr{
+
+.resume-container hr {
     margin: 30px;
 }
 
-.download-cv{
+.download-cv {
     text-align: center;
     margin-top: 50px;
 }
+
 /* footer style */
-footer{
+footer {
     display: flex;
+    gap: 100px;
     background: #FFF8F3;
     margin-top: 100px;
     padding: 130px 230px;
+}
+
+.footer-column {
+    width: 50%;
+}
+.contact input{
+    display: block;
 }
